# IdAllocator

./: CMakeLists.txt  IdAllocatorLogic.cpp  IdAllocatorLogic.hpp  IdAllocatorServiceImpl.cpp  IdAllocatorServiceImpl.hpp  idallocator.proto  paxoskv.proto  server.conf  testclient.cpp
Handler/: AllocateIdHandler.hpp
IdAllocatorServiceClient/: CMakeLists.txt  IdAllocatorServiceClient.cpp  IdAllocatorServiceClient.hpp
PaxosKVServiceClient/: CMakeLists.txt  PaxosKVServiceClient.cpp  PaxosKVServiceClient.hpp
Proto/: idallocator.pb.cc
idallocator/: AsyncRpcHandler.hpp  CMakeLists.txt  IdAllocatorServiceImpl.cpp  IdAllocatorServiceImpl.hpp  IdAllocatorServiceImplInstance.cpp  dylib.cpp  server.conf
idallocator/Handler/: AllocateIdHandler.cpp  BatchAllocateIdHandler.cpp  BatchAllocateIdHandler.hpp
idallocator/Proto/: idallocator.grpc.pb.cc  idallocator.grpc.pb.h  idallocator.pb.h
