CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(idallocator)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(.)
include_directories(/usr/local/include/colib)
LINK_LIBRARIES(pthread protobuf gpr grpc++ grpc++_reflection)
add_subdirectory("./PaxosKVServiceClient")
SET(APP_SOURCES "./dylib.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Proto/*.cc")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Handler/*.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./*.cpp")
INCLUDE_DIRECTORIES(".")
ADD_LIBRARY(idallocator SHARED ${APP_SOURCES})
TARGET_LINK_LIBRARIES(idallocator coredeps paxoskvclient idallocatorclient colib)

add_subdirectory("./IdAllocatorServiceClient")
add_executable(testclient "testclient.cpp")
TARGET_LINK_LIBRARIES(testclient coredeps idallocatorclient colib)